--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 VUE_APP_VRC_API_URL=http://localhost:3000
+VUE_APP_CURRENT_VERSION_JSON_URL=./versions.json
+VUE_APP_NEWEST_VERSION_JSON_URL=http://localhost:3000/versions.json
