refactor: hotfix系のブランチでPRを作成した際にバージョンアップデートの確認をCIで行うように

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,4 +30,4 @@ workflows:
             branches:
               only:
                 - staging
-                - master
+                - /^hotfix.*/
