--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "p-memoize": "^4.0.0",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
+    "vue-click-outside": "^1.1.0",
     "vue-property-decorator": "^8.4.1",
     "vue-router": "^3.1.6",
     "vuex": "^3.1.3",
