--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,7 +8,7 @@
     "https://vrchat.com/",
     "https://www.vrchat.com/"
   ],
-  "page_action": {
+  "browser_action": {
     "default_icon": {
       "19": "icon_small.png",
       "38": "icon_big.png"
