--- a/public/manifest.json
+++ b/public/manifest.json
@@ -21,7 +21,7 @@
   "applications": {
     "gecko": {
       "id": "{aa88fe5f-72c8-46ee-8089-678af6c93b1f}",
-      "update_url": "https://ryouein.github.io/vrchat-friend-instance-list/updates.json",
+      "update_url": "https://raw.githubusercontent.com/ryouEin/vrchat-friend-instance-list/master/updates.json",
       "strict_min_version": "61.0"
     }
   }
