--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "vue-click-outside": "^1.1.0",
     "vue-property-decorator": "^8.4.1",
     "vue-router": "^3.1.6",
+    "vue-virtual-scroller": "^1.0.10",
     "vuex": "^3.1.3",
     "vuex-module-decorators": "^0.16.1"
   },
