--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "vue-property-decorator": "^8.4.1",
     "vue-router": "^3.1.6",
     "vue-virtual-scroller": "^1.0.10",
+    "vue2-hammer": "^2.1.2",
     "vuex": "^3.1.3",
     "vuex-module-decorators": "^0.16.1"
   },
@@ -38,6 +39,7 @@
     "@types/markdown-it": "^10.0.1",
     "@types/markdown-it-link-attributes": "^3.0.0",
     "@types/punycode": "^2.1.0",
+    "@types/vue2-hammer": "^2.1.1",
     "@typescript-eslint/eslint-plugin": "^2.26.0",
     "@typescript-eslint/parser": "^2.26.0",
     "@vue/cli-plugin-babel": "~4.3.0",
