--- a/package.json
+++ b/package.json
@@ -30,9 +30,7 @@
     "vue-property-decorator": "^8.4.1",
     "vue-router": "^3.1.6",
     "vue-virtual-scroller": "^1.0.10",
-    "vue2-hammer": "^2.1.2",
-    "vuex": "^3.1.3",
-    "vuex-module-decorators": "^0.16.1"
+    "vue2-hammer": "^2.1.2"
   },
   "devDependencies": {
     "@types/jest": "^24.0.19",
@@ -50,7 +48,6 @@
     "@vue/cli-plugin-router": "~4.3.0",
     "@vue/cli-plugin-typescript": "~4.3.0",
     "@vue/cli-plugin-unit-jest": "~4.3.0",
-    "@vue/cli-plugin-vuex": "~4.3.0",
     "@vue/cli-service": "~4.3.0",
     "@vue/eslint-config-prettier": "^6.0.0",
     "@vue/eslint-config-typescript": "^5.0.2",
