--- a/package.json
+++ b/package.json
@@ -17,12 +17,12 @@
   },
   "dependencies": {
     "axios": "^0.19.2",
+    "axios-extensions": "^3.1.3",
     "core-js": "^3.6.4",
     "destyle.css": "^1.0.11",
     "lodash": "^4.17.15",
     "markdown-it": "^11.0.0",
     "markdown-it-link-attributes": "^3.0.0",
-    "p-memoize": "^4.0.0",
     "ua-parser-js": "^0.7.21",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
