--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "mock:500Error": "SEND_ERROR_STATUS=500 node mock"
   },
   "dependencies": {
+    "@vue/composition-api": "^1.0.0-beta.14",
     "axios": "^0.19.2",
     "axios-extensions": "^3.1.3",
     "core-js": "^3.6.4",
