--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "vue-click-outside": "^1.1.0",
     "vue-property-decorator": "^8.4.1",
     "vue-router": "^3.1.6",
-    "vue-virtual-scroller": "^1.0.10",
+    "vue-virtual-scroller": "github:ryouEin/vue-virtual-scroller",
     "vue2-hammer": "^2.1.2"
   },
   "devDependencies": {
