--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "mock:500Error": "SEND_ERROR_STATUS=500 node mock"
   },
   "dependencies": {
+    "@sentry/browser": "^5.27.4",
+    "@sentry/integrations": "^5.27.4",
+    "@sentry/tracing": "^5.27.4",
     "@vue/composition-api": "^1.0.0-beta.14",
     "axios": "^0.19.2",
     "axios-extensions": "^3.1.3",
