--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,5 @@
 VUE_APP_VRC_API_URL=https://www.vrchat.com
 VUE_APP_NEWS_API_URL=https://vrc-fil.microcms.io/api/v1/news
 VUE_APP_NEWS_API_KEY=16becba1-447b-46ca-a2f2-e2458caf73eb
+
+VUE_APP_SEND_ERROR_LOG=true
