--- a/package.json
+++ b/package.json
@@ -33,8 +33,7 @@
     "vue-click-outside": "^1.1.0",
     "vue-property-decorator": "^8.4.1",
     "vue-router": "^3.1.6",
-    "vue-virtual-scroller": "github:ryouEin/vue-virtual-scroller",
-    "vue2-hammer": "^2.1.2"
+    "vue-virtual-scroller": "github:ryouEin/vue-virtual-scroller"
   },
   "devDependencies": {
     "@types/jest": "^24.0.19",
@@ -43,7 +42,6 @@
     "@types/markdown-it-link-attributes": "^3.0.0",
     "@types/punycode": "^2.1.0",
     "@types/ua-parser-js": "^0.7.33",
-    "@types/vue2-hammer": "^2.1.1",
     "@typescript-eslint/eslint-plugin": "^2.26.0",
     "@typescript-eslint/parser": "^2.26.0",
     "@vue/cli-plugin-babel": "~4.3.0",
