--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "vue-virtual-scroller": "github:ryouEin/vue-virtual-scroller"
   },
   "devDependencies": {
+    "@sentry/webpack-plugin": "^1.14.0",
     "@types/jest": "^24.0.19",
     "@types/lodash": "^4.14.149",
     "@types/markdown-it": "^10.0.1",
