--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,8 +13,23 @@ jobs:
       # - run: npm run build
       - run: npm run ff_addon_lint:checkVersion
       - run: npm run ff_addon_lint:checkUpdateLinkFormat
+  build:
+    docker:
+      - image: circleci/node:12.16.1
+    working_directory: ~/repo
+    steps:
+      - checkout
+      - run: npm ci
+      - run: npm run build
 workflows:
   version: 2
   check:
     jobs:
       - check
+  sentry_release:
+    jobs:
+      - build:
+          filters:
+            branches:
+              only:
+                - master
