--- a/package.json
+++ b/package.json
@@ -16,9 +16,8 @@
     "mock:500Error": "SEND_ERROR_STATUS=500 node mock"
   },
   "dependencies": {
-    "@sentry/browser": "^5.27.4",
-    "@sentry/integrations": "^5.27.4",
-    "@sentry/tracing": "^5.27.4",
+    "@sentry/browser": "^5.30.0",
+    "@sentry/vue": "^5.30.0",
     "@vue/composition-api": "^1.0.0-beta.14",
     "axios": "^0.21.1",
     "axios-extensions": "^3.1.3",
