--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,8 +9,7 @@ jobs:
       - run: npm ci
       - run: npm run lint
       - run: npm run test:unit
-      # TODO: ビルドがCI上でだけ頻繁に失敗するので一旦取りやめ。解決法探して復活させること。
-      # - run: npm run build
+      - run: npm run typecheck
       - run: npm run ff_addon_lint:checkVersion
       - run: npm run ff_addon_lint:checkUpdateLinkFormat
   build:
