--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,4 @@
-REACT_APP_VRC_API_URL=https://www.vrchat.com
+REACT_APP_VRC_API_URL=https://vrchat.com
 REACT_APP_NEWS_API_URL=https://vrc-fil.microcms.io/api/v1/news
 REACT_APP_NEWS_API_KEY=16becba1-447b-46ca-a2f2-e2458caf73eb
 
