--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "ff_addon_lint:checkVersion": "firefox-addon-version-linter checkVersion --manifestFilePath ./public/manifest.json --updatesFilePath ./updates.json --addonUUID \"{aa88fe5f-72c8-46ee-8089-678af6c93b1f}\"",
     "ff_addon_lint:checkUpdateLinkFormat": "firefox-addon-version-linter checkUpdateLinkFormat --updatesFilePath ./updates.json --addonUUID \"{aa88fe5f-72c8-46ee-8089-678af6c93b1f}\" --format \"https://github.com/ryouEin/vrchat-friend-instance-list/releases/download/[version]/vrchat_friend_instance_list.xpi\"",
-    "ff_addon_lint:checkUpdateLinkValidity": "firefox-addon-version-linter checkUpdateLinkValidity --updatesFilePath ./updates.json --addonUUID \"{aa88fe5f-72c8-46ee-8089-678af6c93b1f}\"",    "start": "react-scripts start",
+    "ff_addon_lint:checkUpdateLinkValidity": "firefox-addon-version-linter checkUpdateLinkValidity --updatesFilePath ./updates.json --addonUUID \"{aa88fe5f-72c8-46ee-8089-678af6c93b1f}\"",
+    "start": "PORT=3030 react-scripts start",
     "build": "INLINE_RUNTIME_CHUNK=false react-scripts build",
     "test": "react-scripts test --watchAll=false --passWithNoTests",
     "eject": "react-scripts eject",
