--- a/.github/workflows/check-on-pr.yml
+++ b/.github/workflows/check-on-pr.yml
@@ -1,7 +1,8 @@
 name: Check On Pull Request
+
 on:
-  pull_request:
-    types: [opened, reopened]
+  pull_request
+
 jobs:
   check:
     runs-on: ubuntu-latest
