--- a/.github/workflows/check-on-pr.yml
+++ b/.github/workflows/check-on-pr.yml
@@ -5,18 +5,29 @@ on:
 
 jobs:
   check:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v2
+
+      - name: Setup Node
+        uses: actions/setup-node@v2
+        with:
+          node-version: '16'
+
       - name: install
         run: npm ci
+
       - name: lint
         run: npm run lint
+
       - name: test
         run: npm run test
+
       - name: build
         run: npm run build
+
       - name: version-check
         run: npm run ff_addon_lint:checkVersion
+
       - name: update-link-format-check
         run: npm run ff_addon_lint:checkUpdateLinkFormat
